--- a/rollup/core/classes/RollupLogger.cls
+++ b/rollup/core/classes/RollupLogger.cls
@@ -50,8 +50,12 @@ public virtual class RollupLogger extends Rollup implements ILogger {
         messages.add(appended);
       }
       // not all Rollup-generated exceptions come with stacktraces - this is a known issue, where using "new DMLException().getStackTraceString()"
-      // works to re-create the stacktrace for all of the calling code
-      messages.add(new DMLException().getStackTraceString());
+      // works to re-create the stacktrace for all of the calling code. we'll prune away any mentions to this class to keep the log size down
+      List<String> innerStacktraces = new DMLException().getStackTraceString().split('\n');
+      while(innerStacktraces.isEmpty() == false && innerStacktraces.get(0).contains('Class.RollupLogger.log')) {
+        innerStacktraces.remove(0);
+      }
+      messages.add(String.join(innerStacktraces, '\n'));
       System.debug(logLevel, 'Rollup: ' + String.join(messages, '\n') + '\n');
     }
   }
