--- a/rollup/core/classes/RollupQueryBuilder.cls
+++ b/rollup/core/classes/RollupQueryBuilder.cls
@@ -54,25 +54,7 @@ public without sharing class RollupQueryBuilder {
       }
     }
 
-    Boolean hasAggregateFunction = false;
-    for (String uniqueQueryFieldName : uniqueQueryFieldNames) {
-      // This is definitely not the most intuitive way to do this, but need to determine if the query
-      // will be a regular query vs an aggregated query - all aggregate functions use '()', so checking
-      // for '(' is a quick & lazy way to check without making larger changes to how RollupQueryBuilder works
-      // (but it's very goofy & could definitely be improved)
-      if (uniqueQueryFieldName?.contains('(')) {
-        hasAggregateFunction = true;
-        break;
-      }
-    }
-    if (
-      hasAggregateFunction == false &&
-      uniqueQueryFieldNames.contains(CURRENCY_ISO_CODE_FIELD_NAME) == false &&
-      UserInfo.isMultiCurrencyOrganization() &&
-      sObjectToken.fields.getMap().containsKey(CURRENCY_ISO_CODE_FIELD_NAME)
-    ) {
-      uniqueQueryFieldNames.add(CURRENCY_ISO_CODE_FIELD_NAME);
-    }
+    this.addCurrencyIsoCodeForMultiCurrencyOrgs(uniqueQueryFieldNames, sObjectToken);
 
     optionalWhereClause = this.adjustWhereClauseForPolymorphicFields(sObjectType, uniqueQueryFieldNames, optionalWhereClause);
 
@@ -155,5 +137,28 @@ public without sharing class RollupQueryBuilder {
 
   private Boolean hasPolymorphicOwnerClause(String whereClause) {
     return whereClause?.contains('.Owner') == true;
+  }
+
+  private void addCurrencyIsoCodeForMultiCurrencyOrgs(List<String> uniqueQueryFieldNames, DescribeSObjectResult sObjectToken) {
+    if (
+      UserInfo.isMultiCurrencyOrganization() &&
+      uniqueQueryFieldNames.contains(CURRENCY_ISO_CODE_FIELD_NAME) == false &&
+      sObjectToken.fields.getMap().containsKey(CURRENCY_ISO_CODE_FIELD_NAME)
+    ) {
+      Boolean hasAggregateFunction = false;
+      for (String uniqueQueryFieldName : uniqueQueryFieldNames) {
+        // This is definitely not the most intuitive way to do this, but need to determine if the query
+        // will be a regular query vs an aggregated query - all aggregate functions use '()', so checking
+        // for '(' is a quick & lazy way to check without making larger changes to how RollupQueryBuilder works
+        // (but it's very goofy & could definitely be improved)
+        if (uniqueQueryFieldName?.contains('(')) {
+          hasAggregateFunction = true;
+          break;
+        }
+      }
+      if (hasAggregateFunction == false) {
+        uniqueQueryFieldNames.add(CURRENCY_ISO_CODE_FIELD_NAME);
+      }
+    }
   }
 }
